<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_app_protection__app_access">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_android_screen_lock"
            android:summary="@string/preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint"
            android:title="@string/preferences_app_protection__screen_lock" />

        <Preference
            android:key="pref_change_passphrase"
            android:summary="@string/preferences__change_your_passphrase"
            android:title="@string/preferences__change_passphrase" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_timeout_passphrase"
            android:summary="@string/preferences__auto_lock_signal_after_a_specified_time_interval_of_inactivity"
            android:title="@string/preferences__inactivity_timeout_passphrase" />

        <Preference
            android:dependency="pref_timeout_passphrase"
            android:key="pref_timeout_interval"
            android:title="@string/preferences__inactivity_timeout_interval" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_screen_security"
            android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots"
            android:title="@string/preferences__screen_security" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_incognito_keyboard"
            android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"
            android:title="@string/preferences__incognito_keyboard" />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider" />

    <PreferenceCategory android:title="@string/preferences_app_protection__communication">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_read_receipts"
            android:summary="@string/preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts"
            android:title="@string/preferences__read_receipts" />

        <Preference
            android:key="preference_category_blocked"
            android:title="@string/preferences_app_protection__blocked_contacts" />

    </PreferenceCategory>

</PreferenceScreen>
