<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/qr_scan_activity__title"
          android:id="@+id/menu_qr_scan"
          android:icon="@drawable/ic_ab_qr"
          app:showAsAction="always"/>

    <item android:title="@string/qr_show_activity__title"
        android:id="@+id/menu_qr_show" />

    <item android:title="@string/text_secure_normal__menu_new_chat"
          android:id="@+id/menu_new_chat" />

    <item android:title="@string/menu_deaddrop"
          android:id="@+id/menu_deaddrop" />

    <item android:title="@string/text_secure_normal__menu_clear_passphrase"
          android:id="@+id/menu_clear_passphrase" />

    <item android:title="@string/text_secure_normal__menu_settings"
          android:id="@+id/menu_settings" />

</menu>
