<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:clickable="false">

        <LinearLayout android:layout_gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:padding="10dp"
                      android:background="?attr/invite_background">

            <ImageView android:id="@+id/heart"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:contentDescription="@string/InviteActivity_heart_content_description"
                       android:src="@drawable/love_heart" />

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/white"
                      android:textSize="20sp"
                      android:text="@string/InviteActivity_friends_dont_let_friends"
                      android:gravity="center_horizontal"
                      android:layout_marginBottom="30dp"
                      android:layout_marginTop="18dp"
                      android:fontFamily="sans-serif-light"
                      android:paddingLeft="10dp"
                      android:paddingStart="10dp"/>

            <EditText android:id="@+id/invite_text"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:minLines="2"
                      tools:text="Let's switch to Signal: https://sgnl.link/asdfdfsa"
                      android:background="@drawable/message_bubble_background"
                      android:paddingTop="10dp"
                      android:paddingBottom="10dp"
                      android:paddingLeft="10dp"
                      android:paddingRight="20dp"
                      android:gravity="top"
                      android:inputType="textShortMessage|textMultiLine"
                      android:textColor="#ff333333"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="10dp"
                          android:gravity="center_horizontal"
                          android:orientation="horizontal">

                <Button android:id="@+id/share_button"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_share_black_18dp"
                        android:drawableStart="@drawable/ic_share_black_18dp"
                        android:text="@string/InviteActivity_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
